common-applications/freesky-icsl-hk-cluster/xihe/xihe-website/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xihe-website
  namespace: xihe
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xihe-website
  template:
    metadata:
      labels:
        app: xihe-website
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      tolerations:
      - key: "icsl"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      containers:
      - name: xihe-website
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-website-test:2e7c9d92da5c19264286a54ff29381bca4652bf9
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
