common-applications/freesky-icsl-hk-cluster/xihe/xihe-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xihe-new-ingress
  namespace: xihe
spec:
  ingressClassName: nginx
  rules:
  - host: xihe.test.osinfra.cn
    http:
      paths:
      - backend:
          service:
            name: xihe-website-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - xihe.test.osinfra.cn
    secretName: xihe-new-tls
